--- a/index.html
+++ b/index.html
@@ -1,59 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <title>@vmwavie | Temporary Profile</title>
-      <link rel="icon" href="assets/rocket.png" type="image/x-icon" />
+      <title>Matheus Fernandes | Software Engineer | @vmwavie</title>
+      <meta name="description" content="Matheus Fernandes is a Software Engineer with experience in Security, DevOps, SecOps, React, Next, Angular, Vue, Node, Java, and PHP. View his profile and download CV.">
+      <meta name="keywords" content="vmwavie, Matheus Fernandes, programador, desenvolvedor fullstack, fullstack-developer, software engineer, security, DevOps, SecOps, React, Next.js, Angular, Vue, Node.js, Java, PHP, Brazil, Brazilian developer, web development, frontend, backend, full-stack, NPM packages, Medium posts, software engineering, tech blogger">
+      <link rel="icon" href="assets/rocket.png" type="image/png">
+      <link rel="preconnect" href="https://cdn.jsdelivr.net">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <style>
          body {
-          font-family: monospace;
-          background-color: #171717;
-          color: #dfdfdf;
+          font-family: monospace, sans-serif;
+          background-color: #050505;
+          color: #b7b7b7;
+         }
+         .social-icon {
+          width: 30px;
+          height: 30px;
          }
       </style>
    </head>
    <body>
-      <div class="container min-vh-100 d-flex align-items-center">
+      <main class="container min-vh-100 d-flex align-items-center">
          <div class="border border-2 m-4 p-4">
-            <div class="text-center">
-               <h4>Profile</h4>
-            </div>
+            <header class="text-center">
+               <h1>Profile</h1>
+            </header>
             <div class="row align-items-center">
-               <div class="col-12 col-md-4">
-                  <h4>About me</h4>
-                  <p>Software Enginner since 2019 with experience in Security, DevOPS, SecOPS, React, Next, Angular, Vue, Node, Java, PHP...</p>
-                  <p>
+               <section class="col-12 col-md-4">
+                  <h2>About me</h2>
+                  <p>Software Engineer since 2019 with experience in Security, DevOps, SecOps, React, Next, Angular, Vue, Node, Java, PHP, and more.</p>
                   <ul>
-                     <li>Packages <a href="https://www.npmjs.com/~vmwavie/" target="_blank">NPM</a>.</li>
-                     <li>Posts <a href="https://medium.com/@vmwavie">Medium</a>.</li>
-                    </ul>
-                    <p>CV <a href="./cv.pdf">click to download</a>.</p>
-                  </p>
-               </div>
-               <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
-                  <img class="rounded-circle" src="https://avatars.githubusercontent.com/u/97563034?v=4" width="260" height="260">
-               </div>
-               <div class="col-12 col-md-4">
-                  <p class="fw-bold">Name:</p>
-                  <p>> Matheus Fernandes</p>
-                  <p class="fw-bold">Country:</p>
-                  <p>> Brazil</p>
-                  <a style="text-decoration: none;" href="https://www.linkedin.com/in/matheuscrestanifernandes/" target="_blank">
-                  <img src="assets/linkedin.svg" height="30" width="30">
-                  </a>
-                  <a style="text-decoration: none;" href="https://github.com/vmwavie" target="_blank">
-                  <img src="assets/github.svg" height="30" width="30">
-                  </a>
-                  <a style="text-decoration: none;" href="https://www.instagram.com/vmwavie/" target="_blank">
-                  <img src="assets/instagram.svg" height="30" width="30">
-                  </a>
-               </div>
+                     <li>Packages: <a href="https://www.npmjs.com/~vmwavie/" target="_blank" rel="noopener noreferrer">NPM</a></li>
+                     <li>Posts: <a href="https://medium.com/@vmwavie" target="_blank" rel="noopener noreferrer">Medium</a></li>
+                  </ul>
+                  <p>CV: <a href="./cv.pdf" download>Download CV</a></p>
+               </section>
+               <section class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+                  <img class="rounded-circle" src="./assets/profile-sonic.gif" width="260" height="260" alt="Animated profile picture of Matheus Fernandes">
+               </section>
+               <section class="col-12 col-md-4">
+                  <p><strong>Name:</strong> Matheus Fernandes</p>
+                  <p><strong>Country:</strong> Brazil</p>
+                  <nav aria-label="Social media links">
+                     <a style="text-decoration: none;" href="https://www.linkedin.com/in/matheuscrestanifernandes/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
+                        <img src="assets/linkedin.svg" alt="LinkedIn logo" class="social-icon">
+                     </a>
+                     <a style="text-decoration: none;"  href="https://github.com/vmwavie" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile">
+                        <img src="assets/github.svg" alt="GitHub logo" class="social-icon">
+                     </a>
+                     <a style="text-decoration: none;" href="https://www.instagram.com/vmwavie/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Profile">
+                        <img src="assets/instagram.svg" alt="Instagram logo" class="social-icon">
+                     </a>
+                  </nav>
+               </section>
             </div>
          </div>
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      </main>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
    </body>
-   <script></script>
 </html>
