--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <p>CV: <a href="./cv.pdf" download>Download CV</a></p>
                </section>
                <section class="col-12 col-md-4 d-flex align-items-center justify-content-center">
-                  <img class="rounded-circle" src="./assets/profile-sonic.gif" width="260" height="260" alt="Animated profile picture of Matheus Fernandes">
+                  <img class="rounded-circle" src="https://cdn.discordapp.com/attachments/1066028884648276109/1301145275355631636/77c5016752c557b2bf8ee52e006be75f.gif?ex=67236977&is=672217f7&hm=bea14d8f3f36d7730312ee69e381671791945539df44a37b5012c3385985476b&" width="260" height="260" alt="Animated profile picture of Matheus Fernandes">
                </section>
                <section class="col-12 col-md-4">
                   <p><strong>Name:</strong> Matheus Fernandes</p>
